[gd_scene load_steps=15 format=3 uid="uid://dviqbc0xl5wt7"]

[ext_resource type="Script" uid="uid://drclwptdpoi4n" path="res://Scene/Swamp_Level_1/barrel_of_oil_3p/barrel_of_oil_3p.gd" id="1_axsfb"]
[ext_resource type="Texture2D" uid="uid://cea5j1ho3svy4" path="res://Sprites/SwampLevel1/Items/Water_drops.png" id="2_ygvmn"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_iffet"]
load_path = "res://.godot/imported/barrel_of_oil.png-0a2619fd8f53d2638c34bd29fdf29505.ctex"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_f7w0r"]
size = Vector2(217, 80)

[sub_resource type="Animation" id="Animation_pfhy4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("barrel_of_oil_3p:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_3dk06"]
resource_name = "water_animation"
length = 5.0
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("barrel_of_oil_3p:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2.5, 5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 5), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6q16s"]
_data = {
&"RESET": SubResource("Animation_pfhy4"),
&"water_animation": SubResource("Animation_3dk06")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0ltf4"]
size = Vector2(217, 20)

[sub_resource type="Animation" id="Animation_bwua1"]
resource_name = "Animation_Player_on_barrel"
length = 2.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("..:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 2.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 10), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_cd103"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("..:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ey3g3"]
_data = {
&"Animation_Player_on_barrel": SubResource("Animation_bwua1"),
&"RESET": SubResource("Animation_cd103")
}

[sub_resource type="Animation" id="Animation_2j5kv"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("WaterDrops_left:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-136, 20)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("WaterDrops_left:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("WaterDrops_left:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.5708]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("WaterDrops_right:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(126, 20)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("WaterDrops_right:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("WaterDrops_right:rotation")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-1.5708]
}

[sub_resource type="Animation" id="Animation_5qka0"]
resource_name = "water_drops"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("WaterDrops_left:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-133, -7), Vector2(-167, -20)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("WaterDrops_left:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("WaterDrops_left:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.959931, 0.436332]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("WaterDrops_right:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(133, -7), Vector2(167, -20)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("WaterDrops_right:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("WaterDrops_right:rotation")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-0.959931, -0.436332]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_cgikg"]
_data = {
&"RESET": SubResource("Animation_2j5kv"),
&"water_drops": SubResource("Animation_5qka0")
}

[node name="barrel_of_oil_3p" type="Node2D"]
position = Vector2(0, 5)
script = ExtResource("1_axsfb")

[node name="barrel_of_oil_3p" type="AnimatableBody2D" parent="."]
collision_mask = 2

[node name="BarrelOfOil" type="Sprite2D" parent="barrel_of_oil_3p"]
rotation = -1.5708
scale = Vector2(0.7, 0.85)
texture = SubResource("CompressedTexture2D_iffet")

[node name="CollisionShape2D" type="CollisionShape2D" parent="barrel_of_oil_3p"]
position = Vector2(0.5, -1)
shape = SubResource("RectangleShape2D_f7w0r")
debug_color = Color(0.686275, 0.584314, 0.286275, 0.180392)

[node name="Animation_oil" type="AnimationPlayer" parent="barrel_of_oil_3p"]
unique_name_in_owner = true
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_6q16s")
}
autoplay = "water_animation"

[node name="Area_player" type="Area2D" parent="barrel_of_oil_3p"]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="barrel_of_oil_3p/Area_player"]
position = Vector2(0.5, -33)
shape = SubResource("RectangleShape2D_0ltf4")
debug_color = Color(0.717647, 0.384314, 0.745098, 0.419608)

[node name="Animation_Player_on_barrel" type="AnimationPlayer" parent="barrel_of_oil_3p/Area_player"]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_ey3g3")
}

[node name="Water_drops" type="Node2D" parent="barrel_of_oil_3p"]

[node name="WaterDrops_left" type="Sprite2D" parent="barrel_of_oil_3p/Water_drops"]
modulate = Color(1, 1, 1, 0)
position = Vector2(-136, 20)
rotation = 1.5708
texture = ExtResource("2_ygvmn")

[node name="WaterDrops_right" type="Sprite2D" parent="barrel_of_oil_3p/Water_drops"]
modulate = Color(1, 1, 1, 0)
position = Vector2(126, 20)
rotation = -1.5708
texture = ExtResource("2_ygvmn")
flip_h = true

[node name="Animation_water_drops" type="AnimationPlayer" parent="barrel_of_oil_3p/Water_drops"]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_cgikg")
}

[node name="Timer" type="Timer" parent="."]
wait_time = 2.1
one_shot = true

[connection signal="body_entered" from="barrel_of_oil_3p/Area_player" to="." method="_on_area_player_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
